// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<div>"abc"</div> 1`] = `
<div>
  abc
</div>
`;

exports[`<div><div></div>"abc"<span></span></div> 1`] = `
<div>
  <div />
  abc
  <span />
</div>
`;

exports[`<div><div></div>{ null }<span></span></div> 1`] = `
<div>
  <div />
  <span />
</div>
`;

exports[`<div><div></div>123<span></span></div> 1`] = `
<div>
  <div />
  123
  <span />
</div>
`;

exports[`<div><span></span></div> 1`] = `
<div>
  <span />
</div>
`;

exports[`<div><span></span><strong></strong></div> 1`] = `
<div>
  <span />
  <strong />
</div>
`;

exports[`<div>{ null }</div> 1`] = `<div />`;

exports[`<div>10</div> 1`] = `
<div>
  10
</div>
`;

exports[`complex tree #1 1`] = `
<div>
  <div>
    hello
  </div>
  <div>
    <span>
      world
    </span>
    <div>
      <span />
    </div>
  </div>
  <div>
    <div />
  </div>
  <div />
</div>
`;
